--- a/index.html
+++ b/index.html
@@ -516,9 +516,9 @@ http://www.templatemo.com/tm-515-eatery
                          </ul>
 
                          <div class="wow fadeInUp copyright-text" data-wow-delay="0.8s"> 
-                              <p><br>Copyright &copy; 2018 <br>Your Company Name 
+                              <p><br>Copyright &copy; 2021 <br>Your Company Name 
                               
-                              <br><br>Design: TemplateMo</p>
+                              <br><br>Design: Web Operation|ExpanUP</p>
                          </div>
                     </div>
                     
